[package]
name = "gnostr-proxy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.57"
clap = { version = "4.0.4", features = ["derive"] }
dsa = "0.4.0"
futures = "0.3.24"
libp2p = { version = "0.48.0", features = ["tcp-tokio", "mdns-tokio", "dns-async-std"] }
libp2p-dns = "0.36.0"
libp2p-proxy = { path = "./lib" }
libp2p-tcp = "0.36.0"
log = "0.4.17"
multihash-derive = "0.8.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde_json = "1.0.85"
ssh-key = { version = "0.4.3", features = ["ed25519", "rsa", "encryption"] }
void = "1.0.2"
