[package]
name = "libp2p-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.48.0", features = ["tcp-tokio", "mdns-tokio"] }
async-std = { version = "1.12.0", features = ["attributes"]}
void = "1.0.2"
log = "0.4.17"
async-trait = "0.1.57"
ssh-key = { version = "0.4.3", features = ["ed25519", "rsa", "encryption"]}
dsa = "0.4.0"
rand = "0.8.5"
pretty_env_logger = "0.4.0"
futures = "0.3.24"

[dev-dependencies]
futures-mockstream = "0.1.2"
